# curves-geometry

./: CMakeLists.txt  README.md  main.cpp
include/: curves.h
src/: CMakeLists.txt  curves.cpp
